changed wording on submit button

--- a/app/views/billables/edit.html.erb
+++ b/app/views/billables/edit.html.erb
@@ -5,7 +5,7 @@
 			<%= f.hidden_field :time_out, :value => Time.now %>
 			<%= f.hidden_field :date_out, :value => Date.today %>
 			<br>
-			<%= f.button :submit %>
+			<%= f.button :submit, "Clock Out" %>
 		<% end %>
 	</center>
 </div>
